fix(static): :bug: Set different names for given and family name fields

--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,11 @@
     </div>
     <div>
       <label for="solicitor-given-name">Your Given name: </label>
-      <input type="text" id="solicitor-given-name" name="solicitor_name" placeholder="Your Given name">
+      <input type="text" id="solicitor-given-name" name="solicitor_given_name" placeholder="Your Given name">
     </div>
     <div>
       <label for="solicitor-family-name">Your Family name: </label>
-      <input type="text" id="solicitor-family-name" name="solicitor_name" placeholder="Your Family name">
+      <input type="text" id="solicitor-family-name" name="solicitor_family_name" placeholder="Your Family name">
     </div>
     <div>
       <label for="book-name">Book Name:</label>
