fix(static): :bug: Correct solicitor id field name

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <form action="/send" method="POST" enctype="application/x-www-form-urlencoded" name="book_info">
     <div>
       <label for="solicitor-id">Your ID:</label>
-      <input type="text" id="solicitor-id" name="book_id" placeholder="Book ID">
+      <input type="text" id="solicitor-id" name="solicitor_id" placeholder="Book ID">
     </div>
     <div>
       <label for="solicitor-given-name">Your Given name: </label>
